# ComplexNumber

./: .gitignore  CMakeLists.txt  README.md
examples/: 00_print_version.cpp  01_print_complex.cpp  02_copy_semantics.cpp  03_move_semantics.cpp  04_addition_operators.cpp  05_subtraction_operators.cpp  06_multiplication_operators.cpp  07_division_operators.cpp  08_comparison_operators.cpp  09_absolute.cpp  10_conjugate.cpp  CMakeLists.txt  example_00_print_version.cpp  example_01_print_complex.cpp  example_02_copy_semantics.cpp  example_03_move_semantics.cpp  example_04_addition_operators.cpp  example_05_subtraction_operators.cpp  example_06_multiplication_operators.cpp  example_07_division_operators.cpp  example_08_comparison_operators.cpp  example_09_absolute.cpp  example_10_conjugate.cpp
include/matho/: complex_number.hpp
tests/: CMakeLists.txt  absolute.cpp  addition_operators.cpp  comparison_operators.cpp  conjugate.cpp  copy_semantics.cpp  division_operators.cpp  move_semantics.cpp  multiplication_operators.cpp  string_conversion.cpp  subtraction_operators.cpp
